[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
async-trait = "0.1.83"
bytes = "1.9.0"
mqttbytes = { git = "https://github.com/bettercalljason/mqttbytes.git" }
quinn = "0.11.6"
rand = "0.8.5"
rand_chacha = "0.3.1"
thiserror = "2.0.9"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.41"
